--- a/website/index.html
+++ b/website/index.html
@@ -235,12 +235,12 @@
             <div class="col-sm-3">
               <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
               <h6 class="c-g waypoint">job title</h6>
-              <h4 class="title waypoint">LARS JANKOWFSKY</h4>
+              <h4 class="title waypoint">VINCENT VO</h4>
             </div>
             <div class="col-sm-3">
               <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
               <h6 class="c-g waypoint">job title</h6>
-              <h4 class="title waypoint">JOSEPH ZIEGLER</h4>
+              <h4 class="title waypoint">VINCENT VO</h4>
             </div>
             <div class="col-sm-3">
               <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
