slide navbar fix adrees image on mobile

--- a/website/index.html
+++ b/website/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-fixed-top navbar-light bg-faded ">
+    <nav class="navbar navbar-fixed-top navbar-light bg-faded " id="main-navbar">
       <div class="container">
         <button class="navbar-toggler pull-left hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
           &#9776;
