--- a/website/index.html
+++ b/website/index.html
@@ -85,22 +85,22 @@
           <div class="row">
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-pepole waypoint"></div>
-              <h2 class="text-center waypoint">18.5</h2>
+              <h2 class="text-center c-g waypoint" style="font-size: 3rem">18.5</h2>
               <h6 class="waypoint">millions people</h6>
             </div>
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-visit waypoint"></div>
-              <h2 class="text-center waypoint">398</h2>
+              <h2 class="text-center c-g waypoint" style="font-size: 3rem">398</h2>
               <h6 class="waypoint">thousands unique visitors</h6>
               </div>
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-startup waypoint"></div>
-              <h2 class="text-center waypoint">267</h2>
+              <h2 class="text-center c-g waypoint" style="font-size: 3rem">267</h2>
               <h6 class="waypoint">of startups</h6>
               </div>
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-first waypoint"></div>
-              <h2 class="text-center waypoint">1</h2>
+              <h2 class="text-center c-g waypoint" style="font-size: 3rem">1</h2>
               <h6 class="waypoint">first expansions</h6>
               </div>
           </div>
