--- a/website/index.html
+++ b/website/index.html
@@ -125,10 +125,10 @@
               <div class="clearfix"></div>
               <br />
               <div class="row">
-                <div class="col-sm-6 text-right">
+                <div class="col-sm-6" id="open-source">
                   <img src="img/whatWeDoPic1.png" class="what-we-do-pic waypoint" />
                 </div>
-                <div class="col-sm-6 text-left">
+                <div class="col-sm-6" id="build-teams">
                   <img src="img/whatWeDoPic2.png" class="what-we-do-pic waypoint" />
                 </div>
               </div>
@@ -167,11 +167,11 @@
                     </div>
                   </div>
                   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="icon-left" aria-hidden="true"> &lt; </span>
                     <span class="sr-only">Previous</span>
                   </a>
                   <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="icon-right" aria-hidden="true"> &gt; </span>
                     <span class="sr-only">Next</span>
                   </a>
                 </div>
@@ -394,6 +394,9 @@
 
     <footer class="no-parallax b-g">
       <div class="container-custom">
+        <div class="img-footer">
+          <img src="img/logo_w.png" class="img-responsive text-center"/>    
+        </div>  
         <p class="pull-right">
           <a href="" class="c-b" data-scroll="true" data-id="#home">Back to top</a>
         </p>
