--- a/website/index.html
+++ b/website/index.html
@@ -374,22 +374,17 @@
     </section>
 
      <section class="section" style="min-height: 0;" id="map">
-      <div class="" >
+      
         <div class="hidden-sm-up">
           <img src="img/address.png" class="img-address waypoint"/>
           <!-- <img src="img/map.jpg" class="img-responsive"/> -->
         </div>
         <div class="hidden-xs-down">
-          <img src="img/map2.png" class="img-responsive img-map2 waypoint"/>
+          <!-- <img src="img/map2.png" class="img-responsive img-map2 waypoint"/> -->
+          <img src="img/address.png" class="img-address waypoint"/>
+          <!-- <img src="img/gMap.jpg" class="img-responsive img-map2"/> -->
+          <div class="map-bg"></div>
         </div>
-        <!-- <div class="container-custom">
-          <div class="content">
-            <div class="row">
-              
-            </div>
-          </div>
-        </div> -->
-      </div>
     </section>
 
     <footer class="no-parallax b-g">
