--- a/website/index.html
+++ b/website/index.html
@@ -78,14 +78,64 @@
             <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
             <div class="clearfix"></div>
             <br />
-            <p class="text-center waypoint">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est nam amet, rerum laudantium modi tenetur, dolor adipisci odio atque nulla laborum eos aut quasi iste voluptates? Expedita ipsum, cum dolore!</p>
-            <br />
-            <br />
+          </div>
+          <div class="row">
+            <div id="about-us-carousel" class="carousel slide waypoint" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#about-us-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#about-us-carousel" data-slide-to="1"></li>
+                <li data-target="#about-us-carousel" data-slide-to="2"></li>
+                <li data-target="#about-us-carousel" data-slide-to="3"></li>
+              </ol>
+              <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                  <div class="container-custom">
+                    <div class="carousel-caption">
+                      <h4>10.5</h4>
+                      <p>10.5 millions people in the U.S. annually booking flights, hotels and rental cars through a travel website scaled by us.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="container-custom">
+                    <div class="carousel-caption">
+                      <h4>390</h4>
+                      <p>390 thousands unique visitors every month in Germany visiting online shops scaled by NFQ.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="container-custom">
+                    <div class="carousel-caption">
+                      <h4>+267</h4>
+                      <p>tons of startups in the USA, Europe and Asia benefiting from our scaling</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="container-custom">
+                    <div class="carousel-caption">
+                      <h4>#1</h4>
+                      <p>8bit Rockstars Vietnam is among the first expansions of NFQ in Asia.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <a class="left carousel-control" href="#about-us-carousel" role="button" data-slide="prev">
+                <span class="icon-left" aria-hidden="true"> </span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#about-us-carousel" role="button" data-slide="next">
+                <span class="icon-right" aria-hidden="true"> </span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
           </div>
           <div class="row">
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-pepole waypoint"></div>
-              <h2 class="text-center c-g waypoint" style="font-size: 3rem">18.5</h2>
+              <h2 class="text-center c-g waypoint" style="font-size: 3rem">10.5</h2>
               <h6 class="waypoint">millions people</h6>
             </div>
             <div class="col-sm-6 col-md-3">
@@ -124,61 +174,63 @@
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
               <br />
-              <div class="row">
-                <div class="col-sm-6" id="open-source">
-                  <img src="img/whatWeDoPic1.png" class="what-we-do-pic waypoint" />
-                </div>
-                <div class="col-sm-6" id="build-teams">
-                  <img src="img/whatWeDoPic2.png" class="what-we-do-pic waypoint" />
-                </div>
-              </div>
-              <div class="row">
-                <div id="myCarousel" class="carousel slide waypoint" data-ride="carousel">
-                  <!-- Indicators -->
-                  <!-- <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                  </ol> -->
-                  <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                      <div class="container-custom">
-                        <div class="carousel-caption">
-                          <h4>Example headline.</h4>
-                          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="container-custom">
-                        <div class="carousel-caption">
-                          <h4>Another example headline.</h4>
-                          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="container-custom">
-                        <div class="carousel-caption">
-                          <h4>One more for good measure.</h4>
-                          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        </div>
-                      </div>
-                    </div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-6" id="open-source">
+                    <img src="img/whatWeDoPic1.png" class="what-we-do-pic waypoint" />
                   </div>
-                  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                    <span class="icon-left" aria-hidden="true"> &lt; </span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                    <span class="icon-right" aria-hidden="true"> &gt; </span>
-                    <span class="sr-only">Next</span>
-                  </a>
+                  <div class="col-sm-6" id="build-teams">
+                    <img src="img/whatWeDoPic2.png" class="what-we-do-pic waypoint" />
+                  </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-12">
-                  <img src="img/whatWeDoPic3.png" class="what-we-do-pic waypoint" style="margin-top: -1rem;" />
+                <div class="row">
+                  <div id="what-we-do-carousel" class="carousel slide waypoint" data-ride="carousel">
+                    <!-- Indicators -->
+                    <!-- <ol class="carousel-indicators">
+                      <li data-target="#what-we-do-carousel" data-slide-to="0" class="active"></li>
+                      <li data-target="#what-we-do-carousel" data-slide-to="1"></li>
+                      <li data-target="#what-we-do-carousel" data-slide-to="2"></li>
+                    </ol> -->
+                    <div class="carousel-inner" role="listbox">
+                      <div class="carousel-item active">
+                        <div class="container-custom">
+                          <div class="carousel-caption">
+                            <h4>Open-source software</h4>
+                            <p>One of our current projects is ONGR - a free and open platform for scaling online business models. It scales your website transactions fast and easy. ONGR supports your online business models and increase your productivity in IT dramatically, see <a href="http://ongr.io." target="_blank">http://ongr.io.</a></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="container-custom">
+                          <div class="carousel-caption">
+                            <h4>Rockstar teams</h4>
+                            <p>We also create, build and educate rockstar teams of engineers which scale our clients from the United States, Europe or Asia and develop web and mobile applications. We do work for some of the hottest internet companies on earth with the latest technologies.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="container-custom">
+                          <div class="carousel-caption">
+                            <h4>Best working environment</h4>
+                            <p>One more special thing we do here is about providing our employees the best working environment in this country. Why? Simply we love our staff.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="left carousel-control" href="#what-we-do-carousel" role="button" data-slide="prev">
+                      <span class="icon-left" aria-hidden="true"> &lt; </span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#what-we-do-carousel" role="button" data-slide="next">
+                      <span class="icon-right" aria-hidden="true"> &gt; </span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <img src="img/whatWeDoPic3.png" class="what-we-do-pic waypoint" style="margin-top: -1rem;" />
+                  </div>
                 </div>
               </div>
             </div>
@@ -206,6 +258,7 @@
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
               <p class="text-center waypoint">Lars co-founded NFQ in 2002 and is mostly responsible for all technology and development related challenges.</p>
+              <p class="text-center waypoint">He was the founding CTO of various successful companies, <a href="">read more ....</a></p>
             </div>
             <div class="col-sm-4">
               <img src="img/joseph.png" alt="" class="img-responsive m-auto waypoint" />
@@ -214,6 +267,7 @@
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
               <p class="text-center waypoint">Joe started his life and education in Texas but began his IT career in the Silicon Valley.</p>
+              <p class="text-center waypoint">In 1995 he worked at Netscape developing some of the first e-commerce applications during the early days of the Internet. <a href="">read more ....</a></p>
             </div>
             <div class="col-sm-4">
               <img src="img/vincent.png" alt="" class="img-responsive m-auto waypoint" />
@@ -222,6 +276,7 @@
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
               <p class="text-center waypoint">Vincent is a lifetime entrepreneur in the media and advertising world of Vietnam.</p>
+              <p class="text-center waypoint">Vincent helped to launch FV hospital in Ho Chi Minh and built such brands at Ogilvy Action such as Blackberry, Acer <a href="">read more ....</a></p>
             </div>
           </div>
           <br />
@@ -275,7 +330,7 @@
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
               <br />
-              <p><span class="c-g waypoint">Join us</span> today to grow your career and live your life with happiness. </p>
+              <p><b class="c-g waypoint">Join us</b> today to grow your career and live your life with happiness. </p>
               <div class="row">
                 <div class="team-wrapper">
                   <img src="img/team1.png" alt="" class="img-team waypoint" id="team-1" />
@@ -297,25 +352,50 @@
               <div class="clearfix"></div>
               <br />
               <div class="container">
-                <p class="text-center waypoint">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque corporis, vitae sapiente. Sed deserunt, quo molestiae maiores asperiores quisquam qui autem officia vero maxime reiciendis nesciunt, eos ex ducimus eligendi.</p>
+                <p class="text-center waypoint">
+                  <b>Interesting in growing with us? </b><br />
+                  visiting our office, <br />
+                  Send me an E-mail or speak with our Ms. Pretty at xxx.xxx.xxxx
+                </p>
                 <div class="row" style="padding: 0 .5rem;">
                   <div class="jobs waypoint">
-                    <h4 class="c-g">Current Employment Opportunities</h4>  
-                    <div class="col-md-4">
+                    <h4 class="c-g" style="margin-bottom: 2rem;">Current Employment Opportunities</h4>  
+                    <div class="job-title col-md-6 col-lg-3">
                       <h5>SENIOR PHP DEVELOPTER</h5>
-                      <small>CLICK FOR MORE DETAILS >> </small>
+                      <!-- <small data-toggle="collapse" data-target="#job-form">CLICK FOR MORE DETAILS >> </small> -->
+                      <small>
+                        <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20SENIOR%20PHP%20DEVELOPTER" target="_top" class="c-g"><b>Click Here to Apply</b></a>
+                      </small>
                     </div>
-                    <div class="col-md-4">
-                      <h5>PROJECT MANAGER</h5>
-                      <small>CLICK FOR MORE DETAILS >> </small>
-                    </div>
-                    <div class="col-md-4">
+                    <div class="job-title col-md-6 col-lg-3">
                       <h5>FRONT-END DEVELOPER</h5>
-                      <small>CLICK FOR MORE DETAILS >> </small>
+                      <!-- <small data-toggle="collapse" data-target="#job-form">CLICK FOR MORE DETAILS >> </small> -->
+                      <small>
+                        <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20FRONT%20END%20DEVELOPTER" target="_top" class="c-g"><b>Click Here to Apply</b></a>
+                      </small>
+                    </div>
+                    <div class="job-title col-md-6 col-lg-3">
+                      <h5>Ruby on Rails DEVELOPER</h5>
+                      <!-- <small data-toggle="collapse" data-target="#job-form">CLICK FOR MORE DETAILS >> </small> -->
+                      <small>
+                        <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20RUBY%20ON%20RAILS%20DEVELOPTER" target="_top" class="c-g"><b>Click Here to Apply</b></a>
+                      </small>
+                    </div>
+                    <div class="job-title col-md-6 col-lg-3">
+                      <h5>iOS DEVELOPER</h5>
+                      <!-- <small data-toggle="collapse" data-target="#job-form">CLICK FOR MORE DETAILS >> </small> -->
+                      <small>
+                        <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20IOS%20DEVELOPTER" target="_top" class="c-g"><b>Click Here to Apply</b></a>
+                      </small>
                     </div>
                   </div>
                 </div>
-              </div>
+                <!-- <div class="row">
+                  <div class="collapse" id="job-form">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque accusamus alias et magni, sed dicta, nesciunt inventore minima architecto itaque libero ipsam nihil nisi sint quasi fugit deserunt ea sunt.
+                  </div>
+                </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -366,6 +446,11 @@
           <div class="clearfix"></div>
           <br />
           <p class="text-center waypoint">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque corporis, vitae sapiente. Sed deserunt, quo molestiae maiores asperiores quisquam qui autem officia vero maxime reiciendis nesciunt, eos ex ducimus eligendi.</p>
+          <p class="text-center waypoint">8Bit Rockstars Co., Ltd.
+            F12A- R22, Vincom Center
+            72 Le Thanh Ton, P. Ben Nghe
+            District 1, Ho Chi Minh City
+            Vietnam</p>
           <div class="row">
 
           </div>
