--- a/website/index.html
+++ b/website/index.html
@@ -447,9 +447,9 @@
           <br />
           <p class="text-center waypoint">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque corporis, vitae sapiente. Sed deserunt, quo molestiae maiores asperiores quisquam qui autem officia vero maxime reiciendis nesciunt, eos ex ducimus eligendi.</p>
           <p class="text-center waypoint">8Bit Rockstars Co., Ltd.
-            F12A- R22, Vincom Center
-            72 Le Thanh Ton, P. Ben Nghe
-            District 1, Ho Chi Minh City
+            F12A- R22, Vincom Center,
+            72 Le Thanh Ton, P. Ben Nghe,
+            District 1, Ho Chi Minh City,
             Vietnam</p>
           <div class="row">
 
