--- a/website/index.html
+++ b/website/index.html
@@ -355,47 +355,184 @@
                 <p class="text-center waypoint">
                   <b>Interesting in growing with us? </b><br />
                   visiting our office, <br />
-                  Send me an E-mail or speak with our Ms. Pretty at xxx.xxx.xxxx
+                  Send us an E-mail or speak with our Ms. Pretty at xxx.xxx.xxxx
                 </p>
                 <div class="row" style="padding: 0 .5rem;">
                   <div class="jobs waypoint">
                     <h4 class="c-g" style="margin-bottom: 2rem;">Current Employment Opportunities</h4>  
-                    <div class="job-title col-md-6 col-lg-3">
+                    <ul class="" role="tablist" id="jobs-options">
+                      <li class="job-title col-md-6 col-lg-3">
+                        <h5>SENIOR PHP DEVELOPTER</h5>
+                        <a class="" href="#php" role="tab" data-scroll="true" data-id="#job-detail">
+                          <small class="c-g">CLICK FOR MORE DETAILS >> </small>
+                        </a>
+                      </li>
+                      <li class="job-title col-md-6 col-lg-3">
+                        <h5>FRONT-END DEVELOPER</h5>
+                        <a class="" href="#front" role="tab" data-scroll="true" data-id="#job-detail">
+                          <small class="c-g">CLICK FOR MORE DETAILS >> </small>
+                        </a>
+                      </li>
+                      <li class="job-title col-md-6 col-lg-3">
+                        <h5>RUBY ON RAILS DEVELOPER</h5>
+                        <a class="" href="#ror" role="tab" data-scroll="true" data-id="#job-detail">
+                          <small class="c-g">CLICK FOR MORE DETAILS >> </small>
+                        </a>
+                      </li>
+                      <li class="job-title col-md-6 col-lg-3">
+                        <h5>iOS DEVELOPER</h5>
+                        <a class="" href="#ios" role="tab" data-scroll="true" data-id="#job-detail">
+                          <small class="c-g">CLICK FOR MORE DETAILS >> </small>
+                        </a>
+                      </li>
+                    </ul>
+                    <!-- <div class="job-title col-md-6 col-lg-3">
                       <h5>SENIOR PHP DEVELOPTER</h5>
-                      <!-- <small data-toggle="collapse" data-target="#job-form">CLICK FOR MORE DETAILS >> </small> -->
-                      <small>
-                        <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20SENIOR%20PHP%20DEVELOPTER" target="_top" class="c-g"><b>Click Here to Apply</b></a>
-                      </small>
+                      <small data-toggle="c-g collapse nav-link"  href="#php" role="tab" data-toggle="tab">CLICK FOR MORE DETAILS >> </small>
                     </div>
                     <div class="job-title col-md-6 col-lg-3">
                       <h5>FRONT-END DEVELOPER</h5>
-                      <!-- <small data-toggle="collapse" data-target="#job-form">CLICK FOR MORE DETAILS >> </small> -->
-                      <small>
-                        <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20FRONT%20END%20DEVELOPTER" target="_top" class="c-g"><b>Click Here to Apply</b></a>
-                      </small>
+                      <small data-toggle="c-g collapse nav-link"  href="#front" role="tab" data-toggle="tab">CLICK FOR MORE DETAILS >> </small>
                     </div>
                     <div class="job-title col-md-6 col-lg-3">
                       <h5>Ruby on Rails DEVELOPER</h5>
-                      <!-- <small data-toggle="collapse" data-target="#job-form">CLICK FOR MORE DETAILS >> </small> -->
-                      <small>
-                        <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20RUBY%20ON%20RAILS%20DEVELOPTER" target="_top" class="c-g"><b>Click Here to Apply</b></a>
-                      </small>
+                      <small data-toggle="c-g collapse nav-link"  href="#ror" role="tab" data-toggle="tab">CLICK FOR MORE DETAILS >> </small>
                     </div>
                     <div class="job-title col-md-6 col-lg-3">
                       <h5>iOS DEVELOPER</h5>
-                      <!-- <small data-toggle="collapse" data-target="#job-form">CLICK FOR MORE DETAILS >> </small> -->
-                      <small>
-                        <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20IOS%20DEVELOPTER" target="_top" class="c-g"><b>Click Here to Apply</b></a>
-                      </small>
-                    </div>
+                      <small data-toggle="c-g collapse nav-link"  href="#ios" role="tab" data-toggle="tab">CLICK FOR MORE DETAILS >> </small>
+                    </div> -->
                   </div>
                 </div>
+                
+
+                <!-- data-target="#job-detail"
+                data-target="#job-detail"
+                data-target="#job-detail"
+                data-target="#job-detail" -->
                 <!-- <div class="row">
                   <div class="collapse" id="job-form">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque accusamus alias et magni, sed dicta, nesciunt inventore minima architecto itaque libero ipsam nihil nisi sint quasi fugit deserunt ea sunt.
                   </div>
                 </div>
               </div> -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#contact-us"></a>
+    </section>
+
+    <section class="no-parallax collapse" id="job-detail">
+      <div class="container-custom">
+        <div class="container">
+          <span class="btn-close">&times;</span>
+          <h2 class="align-center heading waypoint">Job Details</h2>
+
+          <div class="tab-content">
+            <div role="tabpanel" class="tab-pane" id="php">
+              <h5>SENIOR PHP DEVELOPTER</h5>
+              <h6>The Job</h6>
+              <ul>
+                <li>Lead a highly skilled team that works long term on exciting projects -- No short term projects, we deliver quality </li>
+                <li>Be an expert and suggest new technologies to our clients and the team </li> 
+                <li>Define architecture solutions and framework for projects </li>
+                <li>Design high level solutions and approaches for new projects </li> 
+                <li>Build up core components and strengthen core technology capacity </li>
+                <li>Research and apply cutting-edge technologies and develop new ways of unlocking knowledge </li>
+                <li>Be a part of the open source community</li> 
+              </ul>
+
+              <h6>Your Skills and Experience, Desired Skills and Experience </h6>
+              <ul>
+                <li>Very good English communication skills </li>
+                <li>Experience developing web applications </li>
+                <li>3+ years PHP </li>
+                <li>2+ years in any of the above mentioned technologies </li> 
+                <li>Database Experience - SQL / RDBS, Memcached </li> 
+                <li>Test driven development </li> 
+                <li>PHPUnit/PHPSpec/Codeception </li> 
+                <li>Strong understanding of OOP/OOD </li> 
+                <li>GIT</li>
+              </ul>
+              <div class="text-center">
+                <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20SENIOR%20PHP%20DEVELOPTER" target="_top" class="btn btn-success">Click Here to Apply</a>
+              </div>
+            </div>
+            <div role="tabpanel" class="tab-pane" id="front">
+              <h5>FRONT-END DEVELOPER</h5>
+              <h6>The Job</h6>
+              <ul>
+                <li>Join our creative Front-End team to truly become Front End Rockstar </li>
+                <li>Apply the latest technology like AngularJs and ReactJs </li>
+                <li>*Every day you have to learn something new</li>
+              </ul>
+
+            <h6>Your Skills and Experience, Desired Skills and Experience </h6>
+            <ul>
+              <li>2+ years experience in working with front-end projects </li>
+              <li>Excellent at HTML5, CSS3 </li>
+              <li>Experience with CSS frameworks like Bootstrap </li>
+              <li>Proficient at Javascript library and framework (jQuery, Angular / react / backbone) </li>
+              <li>Good knowledge of CSS preprocessors (i.e. Less / Sass) </li>
+              <li>Proficient understanding of cross-browser compatibility issues and ways to work around them. </li>
+              <li>Understanding of Git / SVN </li>
+              <li>Open-minded and good at adapting to frequent changes. </li>
+              <li>Willing to learn new technologies while working </li>
+              <li>Attention to details</li>
+            </ul>
+              <div class="text-center">
+                <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20FRONT%20END%20DEVELOPTER" target="_top" class="btn btn-success">Click Here to Apply</a>
+              </div>
+            </div>
+            <div role="tabpanel" class="tab-pane" id="ror">
+              <h5>RUBY ON RAILS DEVELOPER</h5>
+              <h6>The Job</h6>
+              <ul>
+                <li>Write and maintain good code </li>
+                <li>Architect and maintain complex applications </li>
+                <li>Optimise app and server performance </li>
+                <li>Working, collaborating and knowledge sharing with other engineers</li>
+              </ul>
+
+              <h6>Your Skills and Experience, Desired Skills and Experience </h6>
+              <ul>
+                <li>Ruby 2.2 - Rails 4.x </li>
+                <li>RESTful API design </li>
+                <li>Performance optimisation </li>
+                <li>Unit and integration testing experience </li>
+                <li>Deployment of web applications </li>
+                <li>Agile development methodologies </li>
+                <li>User experience and user workflows </li>
+                <li>Clean, beautiful code </li>
+                <li>Git</li>
+              </ul>
+              <div class="text-center">
+                <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20RUBY%20ON%20RAILS%20DEVELOPTER" target="_top" class="btn btn-success">Click Here to Apply</a>
+              </div>
+            </div>
+            <div role="tabpanel" class="tab-pane" id="ios">
+              <h5>iOS DEVELOPER</h5>
+              <h6>The Job</h6>
+              <ul>
+                <li>Join our creative mobile development team </li>
+                <li>Apply latest technology to build high quality iOS applications </li>
+                <li>Inspire colleagues to continuously generate forward-thinking ideas and actively contribute to a culture of innovation and excellence.</li>
+              </ul>
+
+              <h6 class="text-left">Your Skills and Experience Desired Skills and Experience </h6>
+              <ul>
+                <li>2+ years experience in working with iOS app projects. </li>
+                <li>Excellent Objective-C and XCode. </li>
+                <li>Good mobile application architecture and design experience. </li>
+                <li>Experience in integration of REST APIs. </li>
+                <li>Experience in shipping at least one app on the iOS App Store. </li>
+                <li>Understanding of Git / SVN. </li>
+                <li>Open-minded and good at adapting to frequent changes.</li>
+              </ul>
+              <div class="text-center">
+                <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20IOS%20DEVELOPTER" target="_top" class="btn btn-success">Click Here to Apply</a>
+              </div>
             </div>
           </div>
         </div>
@@ -451,9 +588,6 @@
             72 Le Thanh Ton, P. Ben Nghe,
             District 1, Ho Chi Minh City,
             Vietnam</p>
-          <div class="row">
-
-          </div>
         </div>
       </div>
     </section>
@@ -461,12 +595,16 @@
      <section class="section" style="min-height: 0;" id="map">
       
         <div class="hidden-sm-up">
-          <img src="img/address.png" class="img-address waypoint"/>
+          <a href="https://www.google.com/maps/place/Vincom+Center+B+Shopping+Mall/@10.7779879,106.7016333,18.1z/data=!4m2!3m1!1s0x31752f47df59b94f:0x6bbcaeb33e29c9f2" target="_blank">
+            <img src="img/address.png" class="img-address waypoint"/>
+          </a>
           <!-- <img src="img/map.jpg" class="img-responsive"/> -->
         </div>
         <div class="hidden-xs-down">
           <!-- <img src="img/map2.png" class="img-responsive img-map2 waypoint"/> -->
-          <img src="img/address.png" class="img-address waypoint"/>
+          <a href="https://www.google.com/maps/place/Vincom+Center+B+Shopping+Mall/@10.7779879,106.7016333,18.1z/data=!4m2!3m1!1s0x31752f47df59b94f:0x6bbcaeb33e29c9f2" target="_blank">
+            <img src="img/address.png" class="img-address waypoint"/>
+          </a>
           <!-- <img src="img/gMap.jpg" class="img-responsive img-map2"/> -->
           <div class="map-bg"></div>
         </div>
