--- a/website/index.html
+++ b/website/index.html
@@ -289,23 +289,67 @@
           <div class="row">
             <div class="col-sm-3">
               <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
-              <h6 class="c-g waypoint">job title</h6>
-              <h4 class="title waypoint">VINCENT VO</h4>
+              <h6 class="c-g waypoint">Front End Lead</h6>
+              <h4 class="title waypoint">Itai Baruch</h4>
             </div>
             <div class="col-sm-3">
               <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
-              <h6 class="c-g waypoint">job title</h6>
-              <h4 class="title waypoint">VINCENT VO</h4>
+              <h6 class="c-g waypoint">Project Manager</h6>
+              <h4 class="title waypoint">Chi Nguyen</h4>
             </div>
             <div class="col-sm-3">
               <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
-              <h6 class="c-g waypoint">job title</h6>
-              <h4 class="title waypoint">VINCENT VO</h4>
+              <h6 class="c-g waypoint">Project Manager</h6>
+              <h4 class="title waypoint">Vinh Do</h4>
             </div>
             <div class="col-sm-3">
               <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
-              <h6 class="c-g waypoint">job title</h6>
-              <h4 class="title waypoint">VINCENT VO</h4>
+              <h6 class="c-g waypoint">Recruiter</h6>
+              <h4 class="title waypoint">Sean Laurence</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
+              <h6 class="c-g waypoint">Senior Software Engineer</h6>
+              <h4 class="title waypoint">Dung Nguyen</h4>
+            </div>
+            <div class="col-sm-3">
+              <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
+              <h6 class="c-g waypoint">Software Engineer</h6>
+              <h4 class="title waypoint">Anh Nguyen</h4>
+            </div>
+            <div class="col-sm-3">
+              <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
+              <h6 class="c-g waypoint">Software Engineer</h6>
+              <h4 class="title waypoint">Hau Tran</h4>
+            </div>
+            <div class="col-sm-3">
+              <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
+              <h6 class="c-g waypoint">Software Engineer</h6>
+              <h4 class="title waypoint">Long Nguyen</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-3 hidden-xs-down">
+              <!-- <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
+              <h6 class="c-g waypoint">Senior Software Engineer</h6>
+              <h4 class="title waypoint">Dung Nguyen</h4> -->
+            </div>
+            <div class="col-sm-3">
+              <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
+              <h6 class="c-g waypoint">Software Engineer</h6>
+              <h4 class="title waypoint">Trang Tran</h4>
+            </div>
+            <div class="col-sm-3">
+              <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
+              <h6 class="c-g waypoint">Software Engineer</h6>
+              <h4 class="title waypoint">Tuan Ha</h4>
+            </div>
+            <div class="col-sm-3">
+              <!-- <img src="img/members.png" alt="" class="img-responsive m-auto waypoint" />
+              <h6 class="c-g waypoint">Software Engineer</h6>
+              <h4 class="title waypoint">Long Nguyen</h4> -->
             </div>
           </div>
         </div>
@@ -343,9 +387,6 @@
                   <img src="img/team5.png" alt="" class="img-team waypoint" id="team-8" />
                 </div>
               </div>
-              <!-- <br />
-              <br />
-              <br /> -->
               <h2 class="align-center heading waypoint">Opportunities</h2>
               <br />
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
@@ -386,36 +427,8 @@
                         </a>
                       </li>
                     </ul>
-                    <!-- <div class="job-title col-md-6 col-lg-3">
-                      <h5>SENIOR PHP DEVELOPTER</h5>
-                      <small data-toggle="c-g collapse nav-link"  href="#php" role="tab" data-toggle="tab">CLICK FOR MORE DETAILS >> </small>
-                    </div>
-                    <div class="job-title col-md-6 col-lg-3">
-                      <h5>FRONT-END DEVELOPER</h5>
-                      <small data-toggle="c-g collapse nav-link"  href="#front" role="tab" data-toggle="tab">CLICK FOR MORE DETAILS >> </small>
-                    </div>
-                    <div class="job-title col-md-6 col-lg-3">
-                      <h5>Ruby on Rails DEVELOPER</h5>
-                      <small data-toggle="c-g collapse nav-link"  href="#ror" role="tab" data-toggle="tab">CLICK FOR MORE DETAILS >> </small>
-                    </div>
-                    <div class="job-title col-md-6 col-lg-3">
-                      <h5>iOS DEVELOPER</h5>
-                      <small data-toggle="c-g collapse nav-link"  href="#ios" role="tab" data-toggle="tab">CLICK FOR MORE DETAILS >> </small>
-                    </div> -->
                   </div>
                 </div>
-                
-
-                <!-- data-target="#job-detail"
-                data-target="#job-detail"
-                data-target="#job-detail"
-                data-target="#job-detail" -->
-                <!-- <div class="row">
-                  <div class="collapse" id="job-form">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque accusamus alias et magni, sed dicta, nesciunt inventore minima architecto itaque libero ipsam nihil nisi sint quasi fugit deserunt ea sunt.
-                  </div>
-                </div>
-              </div> -->
             </div>
           </div>
         </div>
@@ -540,40 +553,6 @@
       <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#contact-us"></a>
     </section>
 
-   <!--  <section class="section b-b" id="job">
-      <div class="parallax">
-        <img src="img/careersBottom.jpg" class="img-responsive"/>
-        <div class="container-custom">
-          <div class="content">
-            <h2 class="align-center heading waypoint">Opportunities</h2>
-            <br />
-            <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
-            <div class="clearfix"></div>
-            <br />
-            <p class="text-center waypoint">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque corporis, vitae sapiente. Sed deserunt, quo molestiae maiores asperiores quisquam qui autem officia vero maxime reiciendis nesciunt, eos ex ducimus eligendi.</p>
-            <div class="row" style="padding: 0 .5rem;">
-              <div class="jobs waypoint">
-                <h4 class="c-g">Current Employment Opportunities</h4>  
-                <div class="col-md-4">
-                  <h5>SENIOR PHP DEVELOPTER</h5>
-                  <small>CLICK FOR MORE DETAILS >> </small>
-                </div>
-                <div class="col-md-4">
-                  <h5>PROJECT MANAGER</h5>
-                  <small>CLICK FOR MORE DETAILS >> </small>
-                </div>
-                <div class="col-md-4">
-                  <h5>FRONT-END DEVELOPER</h5>
-                  <small>CLICK FOR MORE DETAILS >> </small>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#contact-us"></a>
-    </section> -->
-
     <section class="no-parallax" id="contact-us">
       <div class="container-custom">
         <div class="container">
@@ -616,7 +595,7 @@
           <img src="img/logo_w.png" class="img-responsive text-center"/>    
         </div>  
         <p class="pull-right">
-          <a href="" class="c-b" data-scroll="true" data-id="#home">Back to top</a>
+          <a href="" class="c-b muted" data-scroll="true" data-id="#home">Back to top</a>
         </p>
         <p> &copy; 2015 8 Bit Rockstars</p>
       </div>
