add some more detail

--- a/website/index.html
+++ b/website/index.html
@@ -66,7 +66,9 @@
           </div>
         </div>
       </div>
-      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#about"></a>
+      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#about">
+        <span class="scroll-arrow-inner"></span>
+      </a>
     </section>
 
     <section class="no-parallax" id="about">
@@ -79,9 +81,8 @@
             <div class="clearfix"></div>
             <br />
           </div>
-          <div class="row">
+          <!-- <div class="row">
             <div id="about-us-carousel" class="carousel slide waypoint" data-ride="carousel">
-              <!-- Indicators -->
               <ol class="carousel-indicators">
                 <li data-target="#about-us-carousel" data-slide-to="0" class="active"></li>
                 <li data-target="#about-us-carousel" data-slide-to="1"></li>
@@ -131,27 +132,31 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
-          </div>
+          </div> -->
           <div class="row">
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-pepole waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">10.5</h2>
               <h6 class="waypoint">millions people</h6>
+              <p class="text-center">in the U.S. annually booking flights, hotels and rental cars through a travel website scaled by us.</p>
             </div>
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-visit waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">398</h2>
               <h6 class="waypoint">thousands unique visitors</h6>
+              <p class="text-center">every month in Germany visiting online shops scaled by NFQ.</p>
               </div>
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-startup waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">267</h2>
               <h6 class="waypoint">of startups</h6>
+              <p class="text-center">in the USA, Europe and Asia benefiting from our scaling</p>
               </div>
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-first waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">1</h2>
-              <h6 class="waypoint">first expansions</h6>
+              <h6 class="waypoint">8 Bit Rockstars</h6>
+              <p class="text-center">Vietnam is among the first expansions of NFQ in Asia.</p>
               </div>
           </div>
         </div>
@@ -159,7 +164,9 @@
         <br />
       </div>
 
-      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#what-we-do"></a>
+      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#what-we-do">
+        <span class="scroll-arrow-inner"></span>
+      </a>
     </section>
     
     <section class="section" id="what-we-do">
@@ -238,7 +245,9 @@
         </div>
 
       </div>
-      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#team"></a>
+      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#team">
+        <span class="scroll-arrow-inner"></span>
+      </a>
     </section>
 
     <section class="" id="team">
@@ -358,7 +367,9 @@
         <br />
         <br />
       </div>
-      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#careers"></a>
+      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#careers">
+        <span class="scroll-arrow-inner"></span>
+      </a>
     </section>
     
     <section class="section" id="careers">
@@ -433,7 +444,9 @@
           </div>
         </div>
       </div>
-      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#contact-us"></a>
+      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#contact-us">
+        <span class="scroll-arrow-inner"></span>
+      </a>
     </section>
 
     <section class="no-parallax collapse" id="job-detail">
@@ -550,7 +563,9 @@
           </div>
         </div>
       </div>
-      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#contact-us"></a>
+      <a class="scroll-arrow hidden-xs hidden-sm" href="" data-scroll="true" data-id="#contact-us">
+        <span class="scroll-arrow-inner"></span>
+      </a>
     </section>
 
     <section class="no-parallax" id="contact-us">
