--- a/website/index.html
+++ b/website/index.html
@@ -612,7 +612,7 @@
           <img src="img/logo_w.png" class="img-responsive text-center"/>    
         </div>  
         <p class="pull-right">
-          <a href="" class="c-b muted" data-scroll="true" data-id="#home">Back to top</a>
+          <a href="" data-scroll="true" data-id="#home">Back to top</a>
         </p>
         <p> &copy; 2015 8 Bit Rockstars</p>
       </div>
