--- a/website/index.html
+++ b/website/index.html
@@ -490,8 +490,8 @@
               <h6>The Job</h6>
               <ul>
                 <li>Join our creative Front-End team to truly become Front End Rockstar </li>
-                <li>Apply the latest technology like AngularJs and ReactJs </li>
-                <li>*Every day you have to learn something new</li>
+                <li>Apply the latest technology like AngularJs, ReactJs, ES6/7 etc... </li>
+                <li>Every day you have to learn something new</li>
               </ul>
 
             <h6>Your Skills and Experience, Desired Skills and Experience </h6>
@@ -499,7 +499,7 @@
               <li>2+ years experience in working with front-end projects </li>
               <li>Excellent at HTML5, CSS3 </li>
               <li>Experience with CSS frameworks like Bootstrap </li>
-              <li>Proficient at Javascript library and framework (jQuery, Angular / react / backbone) </li>
+              <li>Proficient at Javascript library and framework (jQuery, Angular / React / Backbone) </li>
               <li>Good knowledge of CSS preprocessors (i.e. Less / Sass) </li>
               <li>Proficient understanding of cross-browser compatibility issues and ways to work around them. </li>
               <li>Understanding of Git / SVN </li>
