--- a/website/index.html
+++ b/website/index.html
@@ -313,48 +313,53 @@
                 <h4 class="title waypoint">Vinh Do</h4>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
-                <h6 class="c-g waypoint">Recruiter</h6>
-                <h4 class="title waypoint">Sean Laurence</h4>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-3">
-                <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <img src="img/team/all-4.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Senior Software Engineer</h6>
                 <h4 class="title waypoint">Dung Nguyen</h4>
               </div>
-              <div class="col-sm-3">
+              <!-- <div class="col-sm-3">
                 <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <h6 class="c-g waypoint">Recruiter</h6>
+                <h4 class="title waypoint">Sean Laurence</h4>
+              </div> -->
+            </div>
+            <div class="row">
+              <div class="col-sm-3">
+                <img src="img/team/all-5.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <h6 class="c-g waypoint">Software Engineer</h6>
+                <h4 class="title waypoint">Trang Tran</h4>
+              </div>
+              <div class="col-sm-3">
+                <img src="img/team/all-3.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Software Engineer</h6>
                 <h4 class="title waypoint">Anh Nguyen</h4>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <img src="img/team/all-7.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Software Engineer</h6>
                 <h4 class="title waypoint">Hau Tran</h4>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <img src="img/team/all-2.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Software Engineer</h6>
                 <h4 class="title waypoint">Long Nguyen</h4>
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-3">
-                <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
+              <div class="col-sm-3 hiiden-xs-down">
+<!--                 <img src="img/team/all-8.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Chief Accountant/ HR Manager</h6>
-                <h4 class="title waypoint">Hanh Pham</h4>
+                <h4 class="title waypoint">Hanh Pham</h4> -->
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
-                <h6 class="c-g waypoint">Software Engineer</h6>
-                <h4 class="title waypoint">Trang Tran</h4>
-              </div>
-              <div class="col-sm-3">
-                <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <img src="img/team/all-6.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Software Engineer</h6>
                 <h4 class="title waypoint">Tuan Ha</h4>
+              </div>
+              <div class="col-sm-3">
+                <img src="img/team/all-8.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <h6 class="c-g waypoint">Chief Accountant/ HR Manager</h6>
+                <h4 class="title waypoint">Hanh Pham</h4>
               </div>
               <div class="col-sm-3">
                 <!-- <img src="img/team/all-1.jpg" alt="" class="img-responsive m-auto waypoint" />
